# Cyber

./: README.md  docker-compose.yml  index.html  package-lock.json  package.json  start_full_stack.bat  start_full_stack.py  tailwind.config.js  vite.config.ts
backend/: .dockerignore  Dockerfile  README.md  env.example  install.bat  install.py  pyproject.toml  requirements-compatible.txt  requirements-minimal.txt  requirements-simple.txt  requirements.txt  run_full.py  run_simple.bat  setup.py  test_installation.py
backend/.github/workflows/: ci-cd.yml
backend/app/: __init__.py  main.py  main_simple.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: alerts.py  auth.py  metrics.py  monitor.py  reports.py  train.py  visualize.py
backend/app/core/: config.py  database.py  monitoring.py  rate_limiter.py  security.py
backend/app/services/: data_pipeline.py  gemini_client.py  ml_pipeline.py
backend/k8s/: deployment.yaml
frontend/: vite.config.ts
frontend/src/components/: ConnectionStatus.tsx
frontend/src/contexts/: DataContext.tsx
frontend/src/services/: api.ts
src/: App.tsx  index.css  main.tsx
src/components/: AlertCard.tsx  ConnectionStatus.tsx  ErrorBoundary.tsx  Header.tsx  LoadingSpinner.tsx  MetricCard.tsx  Sidebar.tsx  ThreatScoreGauge.tsx
src/contexts/: DataContext.tsx  ThemeContext.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  ne.json
src/pages/: Alerts.tsx  AttackPaths.tsx  Dashboard.tsx  Reports.tsx  Settings.tsx
src/services/: api.ts
src/types/: index.ts
src/utils/: mockData.ts
